# serializer version: 1
# name: test_update_document_owner
  dict({
    'business_id': '1234567-8',
    'content': dict({
      'formData': dict({
        'birthDate': '3.11.1957',
        'firstName': 'Dolph',
        'lastName': 'Lundgren',
      }),
      'reasonForApplication': 'No reason, just testing',
    }),
    'content_schema_url': None,
    'created_at': '2021-06-30T12:00:00+03:00',
    'deletable': True,
    'delete_after': None,
    'document_language': None,
    'draft': False,
    'human_readable_type': dict({
    }),
    'id': '2d2b7a36-a306-4e35-990f-13aea04263ff',
    'locked_after': None,
    'metadata': dict({
      'created_by': 'alex',
      'testing': True,
    }),
    'service': 'service 160',
    'status': dict({
      'status_display_values': dict({
      }),
      'timestamp': '2021-06-30T12:00:00+03:00',
      'value': 'handled',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': 'f917d43aab76420bb2ec53f6684da7f7',
    'tos_record_id': '89837a682b5d410e861f8f3688154163',
    'transaction_id': 'cf0a341b-6bfd-4f59-8d7c-87bf62ba837b',
    'type': 'mysterious form',
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
# name: test_update_document_staff
  dict({
    'business_id': '1234567-8',
    'content': dict({
      'formData': dict({
        'birthDate': '3.11.1957',
        'firstName': 'Dolph',
        'lastName': 'Lundgren',
      }),
      'reasonForApplication': 'No reason, just testing',
    }),
    'content_schema_url': 'https://schema.fi',
    'created_at': '2021-06-30T12:00:00+03:00',
    'deletable': False,
    'delete_after': None,
    'document_language': 'en',
    'draft': True,
    'human_readable_type': dict({
      'en': 'Mysterious Form',
    }),
    'id': '2d2b7a36-a306-4e35-990f-13aea04263ff',
    'locked_after': None,
    'metadata': dict({
      'created_by': 'alex',
      'testing': True,
    }),
    'service': 'service 166',
    'status': dict({
      'status_display_values': dict({
        'fi': 'Käsitelty',
      }),
      'timestamp': '2021-06-30T12:00:00+03:00',
      'value': 'handled',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': 'f917d43aab76420bb2ec53f6684da7f7',
    'tos_record_id': '89837a682b5d410e861f8f3688154163',
    'transaction_id': 'cf0a341b-6bfd-4f59-8d7c-87bf62ba837b',
    'type': 'mysterious form',
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
# name: test_update_document_staff_non_draft
  dict({
    'attachments': list([
    ]),
    'business_id': '1234567-8',
    'content': dict({
      'formData': dict({
        'birthDate': '3.11.1957',
        'firstName': 'Dolph',
        'lastName': 'Lundgren',
      }),
      'reasonForApplication': 'No reason, just testing',
    }),
    'content_schema_url': 'https://schema.fi',
    'created_at': '2021-06-30T12:00:00+03:00',
    'deletable': False,
    'delete_after': None,
    'document_language': 'en',
    'draft': False,
    'human_readable_type': dict({
      'en': 'Mysterious Form',
    }),
    'id': '2d2b7a36-a306-4e35-990f-13aea04263ff',
    'locked_after': None,
    'metadata': dict({
      'created_by': 'alex',
      'testing': True,
    }),
    'service': 'service 168',
    'status': dict({
      'status_display_values': dict({
        'fi': 'Käsitelty',
      }),
      'timestamp': '2021-06-30T12:00:00+03:00',
      'value': 'handled',
    }),
    'status_histories': list([
    ]),
    'tos_function_id': 'f917d43aab76420bb2ec53f6684da7f7',
    'tos_record_id': '89837a682b5d410e861f8f3688154163',
    'transaction_id': 'cf0a341b-6bfd-4f59-8d7c-87bf62ba837b',
    'type': 'mysterious form',
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
